--- a/belonging/index.html
+++ b/belonging/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/bootstrap.min.css" type="text/css" media="screen and (min-width:870px)"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -29,10 +29,10 @@
     <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/belonging/index.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../html/location.html"><h3 class="access">アクセス</h3></a>
-    <form action="../html/result.html" class="search">
-      <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-    </form>
+    <div class="search">
+    <script async src="../script/search.js"></script>
+    <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -42,10 +42,10 @@
     </p>
     <nav id="bar">
       <ul>
-      <form action="../html/result.html" class="search">
-          <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-          <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-      </form>
+        <div class="search">
+          <script async src="../script/search.js"></script>
+          <div class="gcse-search"></div>
+        </div>
       <li><a href="../en/belonging/index.html"><h3 class="lang">ENGLISH</h3></a></li>
       <li><a href="../html/location.html"><h3 class="access">アクセス</h3></a></li>
       <li><a href="../html/purpose.html">寮の目的 &gt;</a></li>
@@ -60,15 +60,14 @@
   </nav>
 </div>
 
-  <div class="main">
-    <h2>寮生用サイト一覧</h2>
+  <div id="list">
       <ul>
-        <a href="kondate.pdf"><li>寮の献立</li></a>
-        <a href=""><li>シー・アンド・シー ログインページ</li></a>
-        <a href=""><li>高城寮GitHub参加申込フォーム(学生のみ)</li></a>
+        <h2>寮生用サイト一覧</h2>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf"><li>寮の献立</li></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2"><li>寮食 食数管理システム(欠食申請)</li></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u"><li>高城寮GitHub参加申込フォーム(学生のみ)</li></a>
       </ul>
   </div>
-
   <div class="footer">
     <img src="../img/footer.png">
     <a href="../html/site.html"><p><span id="site">このサイトについて</span></p></a>
