--- a/en/index.html
+++ b/en/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--index用CSS-->
-  <link rel="stylesheet" href="../style/indexMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--index用CSS-->
-  <link rel="stylesheet" href="../style/index.css" type="text/css" media="screen and (min-width:1450px)"> <!--index用CSS-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--index用CSS-->
+  <link rel="stylesheet" href="../style/indexMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1500px)"> <!--index用CSS-->
+  <link rel="stylesheet" href="../style/index.css" type="text/css" media="screen and (min-width:1500px)"> <!--index用CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1500px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1500px)"> <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -32,10 +32,10 @@
     <a href="index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../index.html"><h3 class="lang">日本語</h3></a>
     <a href="location.html"><h3 class="access">Location</h3></a>
-    <form action="result.html" class="search">
-      <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="search" method="get">
-    </form>
+    <div class="search">
+      <script async src="../script/search.js"></script>
+      <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -45,10 +45,10 @@
     </p>
     <nav id="bar">
       <ul>
-        <form action="result.html" class="search">
-          <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
-          <input id="search-buttom" class="fas" type="submit" value="search" method="get">
-        </form>
+        <div class="search">
+          <script async src="../script/search.js"></script>
+          <div class="gcse-search"></div>
+        </div>
         <li><a href="../index.html"><h3 class="lang">日本語</h3></a></li>
         <li><a href="location.html"><h3 class="access">Location</h3></a></li>
         <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
@@ -97,10 +97,10 @@
   <div id="links">
   <h2 id="links-title">LINKS</h2>
   <div class="links-inner">
-    <p><a target="_blank" href="https://www.tokuyama.ac.jp/english/">Tokuyama College of Technology.</a></p>
-    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">International facebook</a></p>
-    <p><a target="_blank" href="https://www.bikita.jp/class/index.php?cl=0f2b47">TCT Alumni association,<br> Takajo Kai</a></p>
-    <p><a target="_blank" href="https://www.tokuyama.ac.jp/examsp/index.html">Exam Imformation site</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/english/">Tokuyama College of Technology.</a></p>
+    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">International facebook</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://www.bikita.jp/class/index.php?cl=0f2b47">TCT Alumni association,<br> Takajo Kai</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/examsp/index.html">Exam Imformation site</a></p>
   </div>
   </div>
 
@@ -112,7 +112,6 @@
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/indexEN.js"></script> <!--JS取り込み-->
-  <script src="../script/search.js"></script> <!--JS取り込み-->
   <script src="../script/sliderEN.js"></script> <!--JS取り込み-->
   <script src="../script/common.js"></script> <!--JS取り込み-->
   </body>
