--- a/en/it.html
+++ b/en/it.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
+  <link rel="stylesheet" href="../style/bootstrap.min.css" type="text/css" media="screen and (min-width:870px)"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -30,10 +30,10 @@
     <a href="index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../html/it.html"><h3 class="lang">日本語</h3></a>
     <a href="location.html"><h3 class="access">Location</h3></a>
-    <form action="result.html" class="search">
-      <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="search" method="get">
-    </form>
+    <div class="search">
+      <script async src="../script/search.js"></script>
+      <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -43,10 +43,10 @@
     </p>
     <nav id="bar">
       <ul>
-        <form action="result.html" class="search">
-          <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
-          <input id="search-buttom" class="fas" type="submit" value="search" method="get">
-        </form>
+        <div class="search">
+          <script async src="../script/search.js"></script>
+          <div class="gcse-search"></div>
+        </div>
         <li><a href="../html/it.html"><h3 class="lang">日本語</h3></a></li>
         <li><a href="location.html"><h3 class="access">Location</h3></a></li>
         <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
@@ -69,6 +69,5 @@
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/common.js"></script> <!--JS取り込み-->
-  <script src="../script/search.js"></script> <!--JS取り込み-->
   </body>
 </html>
