--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
+  <link rel="stylesheet" href="../style/bootstrap.min.css" type="text/css" media="screen and (min-width:870px)"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -31,10 +31,10 @@
     <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/contact.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
-    <form action="result.html" class="search">
-      <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-    </form>
+    <div class="search">
+      <script async src="../script/search.js"></script>
+      <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -63,8 +63,10 @@
   </div>
 
   <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
-  <p id="contact">学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
-    Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
+  <div id="contact">
+    <p>学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
+      Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
+  </div>
 
   
 
@@ -76,6 +78,5 @@
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/common.js"></script> <!--JS取り込み-->
-  <script src="../script/search.js"></script> <!--JS取り込み-->
   </body>
 </html>
