--- a/html/cost.html
+++ b/html/cost.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
+  <link rel="stylesheet" href="../style/bootstrap.min.css" type="text/css" media="screen and (min-width:870px)"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -29,10 +29,10 @@
     <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/cost.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
-    <form action="result.html" class="search">
-      <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-    </form>
+    <div class="search">
+      <script async src="../script/search.js"></script>
+      <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -42,10 +42,10 @@
     </p>
     <nav id="bar">
       <ul>
-        <form action="result.html" class="search">
-          <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-          <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </form>
+        <div class="search">
+          <script async src="../script/search.js"></script>
+          <div class="gcse-search"></div>
+        </div>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
         <li><a href="purpose.html">寮の目的 &gt;</a></li>
@@ -84,7 +84,7 @@
           <td>1,000円</td>
         </tr>
         <tr>
-          <th scope="row">入寮生会費</th>
+          <th scope="row">寮生会費</th>
           <td>年額</td>
           <td>1,500円</td>
         </tr>
@@ -100,6 +100,5 @@
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/common.js"></script> <!--JS取り込み-->
-  <script src="../script/search.js"></script> <!--JS取り込み-->
   </body>
 </html>
