--- a/html/notice/20201022-1.html
+++ b/html/notice/20201022-1.html
@@ -1,11 +1,20 @@
+<!-- 運営の方々、8~10行目,70~74行目のみ編集お願いします。 -->
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  
+  <!-- 以下のすべてのタイトルを変更 -->
+  <title>寮のホームページのリニューアルについて | 高城寮</title> <!--タイトル-->
+  <meta property="og:site_name" content="寮のホームページのリニューアルについて | 高城寮" /> <!--タイトル-->
+  <meta property="og:title" content="寮のホームページのリニューアルについて | 高城寮"/> <!--タイトル-->
+
+  
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
   <link rel="stylesheet" href="../../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
+  <link rel="stylesheet" href="../../style/bootstrap.min.css" type="text/css" media="screen and (min-width:870px)"> <!--bootstrap css　読み込み-->
   <link href="https://use.fwesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -13,15 +22,12 @@
   <meta charset="utf-8"> <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>お知らせ | 高城寮</title> <!--タイトル-->
   <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
-  <meta property="og:title" content="お問い合わせ | 高城寮"/> <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
   <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
-  <meta property="og:site_name" content="お問い合わせ | 高城寮" /> <!--タイトル-->
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
 <body>
@@ -30,10 +36,10 @@
     <a href="../../index.html"><img id="logo" src="../../img/header.png"></a>
     <a href="../../en/contact.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../location.html"><h3 class="access">アクセス</h3></a>
-    <form action="result.html" class="search">
-      <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-    </form>
+    <div class="search">
+      <script async src="../../script/search.js"></script>
+      <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -43,10 +49,10 @@
     </p>
     <nav id="bar">
       <ul>
-        <form action="result.html" class="search">
-          <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-          <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </form>
+        <div class="search">
+          <script async src="../../script/search.js"></script>
+          <div class="gcse-search"></div>
+        </div>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
         <li><a href="../purpose.html">寮の目的 &gt;</a></li>
@@ -61,9 +67,12 @@
     </nav>
   </div>
 
-  <div id="notice">
-
+<!-- mainの中に内容を記述 -->
+  <div class="main">
+    <h2>寮のホームページのリニューアルについて</h2>
+    <p>高城寮公式ホームページ(当サイト)がリニューアルしました！<br>デザインが一新したほか、キーワード検索機能、コンテンツの増加、寮生用ページの追加などが行われました。</p>
   </div>
+
 
   <div class="footer">
     <img src="../../img/footer.png">
@@ -73,6 +82,5 @@
 
   <script type="text/javascript" src="../../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../../script/common.js"></script> <!--JS取り込み-->
-  <script src="../..//script/search.js"></script> <!--JS取り込み-->
   </body>
 </html>
