--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <a href=""><img id="logo" src="img/header.png"></a>
     <a href="en/index.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="html/location.html"><h3 class="access">アクセス</h3></a>
-    <form action="html/result.html" class="search">
-      <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-      <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-    </form>
+    <div class="search">
+      <script async src="script/search.js"></script>
+      <div class="gcse-search"></div>
+    </div>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
@@ -46,10 +46,10 @@
     </p>
     <nav id="bar">
       <ul>
-        <form action="html/result.html" class="search">
-            <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-            <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </form>
+        <div class="search">
+          <script async src="script/search.js"></script>
+          <div class="gcse-search"></div>
+        </div>
         <li><a href="en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="html/location.html"><h3 class="access">アクセス</h3></a></li>
         <li><a href="html/purpose.html">寮の目的 &gt;</a></li>
@@ -98,10 +98,10 @@
   <div id="links">
   <h2 id="links-title">LINKS</h2>
   <div class="links-inner">
-    <p><a target="_blank" href="https://www.tokuyama.ac.jp/">徳山工業高等専門学校</a></p>
-    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">徳山高専国際交流facebook</a></p>
-    <p><a target="_blank" href="https://www.bikita.jp/class/index.php?cl=0f2b47">徳山高専同窓会 高城会</a></p>
-    <p><a target="_blank" href="https://www.tokuyama.ac.jp/examsp/index.html">徳山高専 入試情報サイト</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/">徳山工業高等専門学校</a></p>
+    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">徳山高専国際交流facebook</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://www.bikita.jp/class/index.php?cl=0f2b47">徳山高専同窓会 高城会</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/examsp/index.html">徳山高専 入試情報サイト</a></p>
   </div>
   </div>
   <div class="footer">
@@ -113,7 +113,6 @@
   <script type="text/javascript" src="script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="script/index.js"></script> <!--JS取り込み-->
   <script src="script/slider.js"></script> <!--JS取り込み-->
-  <script src="script/search.js"></script> <!--JS取り込み-->
   <script src="script/common.js"></script> <!--JS取り込み-->
   </body>
 </html>
