--- a/html/notice/20201022-1.html
+++ b/html/notice/20201022-1.html
@@ -69,10 +69,17 @@
 
 <!-- mainの中に内容を記述 -->
   <div class="main">
+    <h3>2020/10/22</h3>
     <h2>寮のホームページのリニューアルについて</h2>
     <p>高城寮公式ホームページ(当サイト)がリニューアルしました！<br>デザインが一新したほか、キーワード検索機能、コンテンツの増加、寮生用ページの追加などが行われました。</p>
-  </div>
 
+    <!-- 以下は編集しないでください -->
+    <div id="share">
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+      <div id="fb-root"></div>
+    </div>
+  </div>
 
   <div class="footer">
     <img src="../../img/footer.png">
@@ -82,5 +89,7 @@
 
   <script type="text/javascript" src="../../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../../script/common.js"></script> <!--JS取り込み-->
+  <script src="../../script/notice.js"></script> <!--JS取り込み-->
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0" nonce="R07SGm58"></script>
   </body>
 </html>
