--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -69,8 +69,21 @@
 
 <!-- mainの中に内容を記述 -->
   <div class="main">
-    <h2>タイトル</h2>
-    <p>内容(詳細)</p>
+    <h3>2020/10/23</h3>
+    <h2>寮内Wi-FiのAP交換および光回線の増設について</h2>
+    <p>学生のオンライン授業において、快適な環境を提供できるよう、
+      寮内Wi-FiのAP交換および光回線の増設を行いました。<br>これにより、
+      1つのAPにつき接続先が5.0GHz帯と2.4GHz帯の2種類が使用できるように
+      なりました。<br>また、これまで高城寮全体で2本の光回線を運用していましたが、
+      1回線追加して計3回線としました。
+</p>
+
+    <!-- 以下は編集しないでください -->
+    <div id="share">
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+      <div id="fb-root"></div>
+    </div>
   </div>
 
 
@@ -82,5 +95,7 @@
 
   <script type="text/javascript" src="../../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../../script/common.js"></script> <!--JS取り込み-->
+  <script src="../../script/notice.js"></script> <!--JS取り込み-->
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0" nonce="R07SGm58"></script>
   </body>
 </html>
