--- a/html/notice/template.html
+++ b/html/notice/template.html
@@ -1,4 +1,4 @@
-<!-- 運営の方々、8~10行目,70~74行目のみ編集お願いします。 -->
+<!-- 運営の方々、8~10行目,72~74行目のみ編集お願いします。 -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -69,8 +69,16 @@
 
 <!-- mainの中に内容を記述 -->
   <div class="main">
+    <h3>20XX/YY/ZZ</h3>
     <h2>タイトル</h2>
     <p>内容(詳細)</p>
+
+    <!-- 以下は編集しないでください -->
+    <div id="share">
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+      <div id="fb-root"></div>
+    </div>
   </div>
 
 
@@ -82,5 +90,7 @@
 
   <script type="text/javascript" src="../../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../../script/common.js"></script> <!--JS取り込み-->
+  <script src="../../script/notice.js"></script> <!--JS取り込み-->
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0" nonce="R07SGm58"></script>
   </body>
 </html>
