--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -5,9 +5,9 @@
 <head>
   
   <!-- 以下のすべてのタイトルを変更 -->
-  <title>タイトル | 高城寮</title> <!--タイトル-->
-  <meta property="og:site_name" content="タイトル | 高城寮" /> <!--タイトル-->
-  <meta property="og:title" content="タイトル | 高城寮"/> <!--タイトル-->
+  <title>寮内Wi-FiのAP交換および光回線の増設について | 高城寮</title> <!--タイトル-->
+  <meta property="og:site_name" content="寮内Wi-FiのAP交換および光回線の増設について | 高城寮" /> <!--タイトル-->
+  <meta property="og:title" content="寮内Wi-FiのAP交換および光回線の増設について | 高城寮"/> <!--タイトル-->
 
   
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
