--- a/belonging/index.html
+++ b/belonging/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="E:\HomePage_img/header.png"></a>
+    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/belonging/index.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../html/location.html"><h3 class="access">アクセス</h3></a>
     <div class="search">
@@ -67,7 +67,7 @@
       </ul>
   </div>
   <div class="footer">
-    <img src="E:\HomePage_img/footer.png">
+    <img src="../img/footer.png">
     <a href="../html/site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
