--- a/en/index.html
+++ b/en/index.html
@@ -37,9 +37,9 @@
   </header>
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
-    <div id="video-origin">
-      <video id="video" src="../video/OverView.mp4" type="video/mp4" poster="../img/OverViewSky.JPG" webkit-playsinline playsinline muted autoplay loop></video>
-    </div>
+    <video id="video" poster="../img/OverViewSky.JPG" autoplay playsinline muted="muted" loop="loop" preload="none">
+      <source src="../video/overView.MP4" type="video/mp4">
+    </video>
   </div>
   <div id="wrapper">
     <p class="btn-gnavi">
