--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
-    <video id="video" poster="img/OverViewSky.JPG" playsinline muted autoplay loop preload="auto">
+    <video id="video" poster="img/OverViewSky.JPG" autoplay playsinline muted="muted" loop="loop" preload="none">
       <source src="video/overView.MP4" type="video/mp4">
     </video>
   </div>
